infra/nested/onprem/main.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.42.1.51946",
      "templateHash": "11639545524895100670"
    }
  },
  "parameters": {
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Deployment region"
      }
    },
    "prefix": {
      "type": "string",
      "defaultValue": "onprem",
      "metadata": {
        "description": "Resource name prefix"
      }
    },
    "adminUsername": {
      "type": "string",
      "metadata": {
        "description": "VM administrator username"
      }
    },
    "adminPassword": {
      "type": "securestring",
      "metadata": {
        "description": "VM administrator password"
      }
    },
    "vmSize": {
      "type": "string",
      "defaultValue": "Standard_E8s_v5",
      "metadata": {
        "description": "VM size (must support nested virtualization)"
      }
    },
    "dataDiskSizeGB": {
      "type": "int",
      "defaultValue": 256,
      "metadata": {
        "description": "Data disk size in GB for Hyper-V VM storage"
      }
    }
  },
  "resources": [
    {
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2025-04-01",
      "name": "deploy-network",
      "properties": {
        "expressionEvaluationOptions": {
          "scope": "inner"
        },
        "mode": "Incremental",
        "parameters": {
          "location": {
            "value": "[parameters('location')]"
          },
          "vnetName": {
            "value": "[format('vnet-{0}', parameters('prefix'))]"
          }
        },
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
          "contentVersion": "1.0.0.0",
          "metadata": {
            "_generator": {
              "name": "bicep",
              "version": "0.42.1.51946",
              "templateHash": "2871752405224046231"
            }
          },
          "parameters": {
            "location": {
              "type": "string"
            },
            "vnetName": {
              "type": "string"
            },
            "vnetAddressPrefix": {
              "type": "string",
              "defaultValue": "10.1.0.0/16"
            },
            "bastionSubnetPrefix": {
              "type": "string",
              "defaultValue": "10.1.0.0/26"
            },
            "onpremSubnetPrefix": {
              "type": "string",
              "defaultValue": "10.1.1.0/24"
            }
          },
          "resources": [
            {
              "type": "Microsoft.Network/publicIPAddresses",
              "apiVersion": "2024-05-01",
              "name": "pip-ng-onprem-nested",
              "location": "[parameters('location')]",
              "sku": {
                "name": "Standard"
              },
              "properties": {
                "publicIPAllocationMethod": "Static"
              }
            },
            {
              "type": "Microsoft.Network/natGateways",
              "apiVersion": "2024-05-01",
              "name": "ng-onprem-nested",
              "location": "[parameters('location')]",
              "sku": {
                "name": "Standard"
              },
              "properties": {
                "idleTimeoutInMinutes": 4,
                "publicIpAddresses": [
                  {
                    "id": "[resourceId('Microsoft.Network/publicIPAddresses', 'pip-ng-onprem-nested')]"
                  }
                ]
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', 'pip-ng-onprem-nested')]"
              ]
            },
            {
              "type": "Microsoft.Network/networkSecurityGroups",
              "apiVersion": "2024-05-01",
              "name": "nsg-onprem-nested",
              "location": "[parameters('location')]",
              "properties": {
                "securityRules": [
                  {
                    "name": "AllowVNetInbound",
                    "properties": {
                      "priority": 100,
                      "direction": "Inbound",
                      "access": "Allow",
                      "protocol": "*",
                      "sourceAddressPrefix": "VirtualNetwork",
                      "sourcePortRange": "*",
                      "destinationAddressPrefix": "VirtualNetwork",
                      "destinationPortRange": "*"
                    }
                  },
                  {
                    "name": "DenyInternetInbound",
                    "properties": {
                      "priority": 4000,
                      "direction": "Inbound",
                      "access": "Deny",
                      "protocol": "*",
                      "sourceAddressPrefix": "Internet",
                      "sourcePortRange": "*",
                      "destinationAddressPrefix": "*",
                      "destinationPortRange": "*"
                    }
                  }
                ]
              }
            },
            {
              "type": "Microsoft.Network/networkSecurityGroups",
              "apiVersion": "2024-05-01",
              "name": "nsg-bas-onprem-nested",
              "location": "[parameters('location')]",
              "properties": {
                "securityRules": [
                  {
                    "name": "AllowHttpsInbound",
                    "properties": {
                      "priority": 120,
                      "direction": "Inbound",
                      "access": "Allow",
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "443",
                      "sourceAddressPrefix": "Internet",
                      "destinationAddressPrefix": "*"
                    }
                  },
                  {
                    "name": "AllowGatewayManagerInbound",
                    "properties": {
                      "priority": 130,
                      "direction": "Inbound",
                      "access": "Allow",
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "443",
                      "sourceAddressPrefix": "GatewayManager",
                      "destinationAddressPrefix": "*"
                    }
                  },
                  {
                    "name": "AllowAzureLoadBalancerInbound",
                    "properties": {
                      "priority": 140,
                      "direction": "Inbound",
                      "access": "Allow",
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "443",
                      "sourceAddressPrefix": "AzureLoadBalancer",
                      "destinationAddressPrefix": "*"
                    }
                  },
                  {
                    "name": "AllowBastionHostCommunicationInbound",
                    "properties": {
                      "priority": 150,
                      "direction": "Inbound",
                      "access": "Allow",
                      "protocol": "*",
                      "sourcePortRange": "*",
                      "destinationPortRanges": [
                        "8080",
                        "5701"
                      ],
                      "sourceAddressPrefix": "VirtualNetwork",
                      "destinationAddressPrefix": "VirtualNetwork"
                    }
                  },
                  {
                    "name": "AllowSshRdpOutbound",
                    "properties": {
                      "priority": 100,
                      "direction": "Outbound",
                      "access": "Allow",
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRanges": [
                        "22",
                        "3389"
                      ],
                      "sourceAddressPrefix": "*",
                      "destinationAddressPrefix": "VirtualNetwork"
                    }
                  },
                  {
                    "name": "AllowAzureCloudOutbound",
                    "properties": {
                      "priority": 110,
                      "direction": "Outbound",
                      "access": "Allow",
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "443",
                      "sourceAddressPrefix": "*",
                      "destinationAddressPrefix": "AzureCloud"
                    }
                  },
                  {
                    "name": "AllowBastionHostCommunicationOutbound",
                    "properties": {
                      "priority": 120,
                      "direction": "Outbound",
                      "access": "Allow",
                      "protocol": "*",
                      "sourcePortRange": "*",
                      "destinationPortRanges": [
                        "8080",
                        "5701"
                      ],
                      "sourceAddressPrefix": "VirtualNetwork",
                      "destinationAddressPrefix": "VirtualNetwork"
                    }
                  },
                  {
                    "name": "AllowGetSessionInformationOutbound",
                    "properties": {
                      "priority": 130,
                      "direction": "Outbound",
                      "access": "Allow",
                      "protocol": "*",
                      "sourcePortRange": "*",
                      "destinationPortRange": "80",
                      "sourceAddressPrefix": "*",
                      "destinationAddressPrefix": "Internet"
                    }
                  }
                ]
              }
            },
            {
              "type": "Microsoft.Network/virtualNetworks",
              "apiVersion": "2024-05-01",
              "name": "[parameters('vnetName')]",
              "location": "[parameters('location')]",
              "properties": {
                "addressSpace": {
                  "addressPrefixes": [
                    "[parameters('vnetAddressPrefix')]"
                  ]
                },
                "subnets": [
                  {
                    "name": "AzureBastionSubnet",
                    "properties": {
                      "addressPrefix": "[parameters('bastionSubnetPrefix')]",
                      "networkSecurityGroup": {
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-bas-onprem-nested')]"
                      }
                    }
                  },
                  {
                    "name": "snet-onprem-nested",
                    "properties": {
                      "addressPrefix": "[parameters('onpremSubnetPrefix')]",
                      "defaultOutboundAccess": false,
                      "natGateway": {
                        "id": "[resourceId('Microsoft.Network/natGateways', 'ng-onprem-nested')]"
                      },
                      "networkSecurityGroup": {
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-onprem-nested')]"
                      }
                    }
                  }
                ]
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/natGateways', 'ng-onprem-nested')]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-bas-onprem-nested')]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-onprem-nested')]"
              ]
            }
          ],
          "outputs": {
            "vnetId": {
              "type": "string",
              "value": "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnetName'))]"
            },
            "vnetName": {
              "type": "string",
              "value": "[parameters('vnetName')]"
            },
            "bastionSubnetId": {
              "type": "string",
              "value": "[reference(resourceId('Microsoft.Network/virtualNetworks', parameters('vnetName')), '2024-05-01').subnets[0].id]"
            },
            "onpremSubnetId": {
              "type": "string",
              "value": "[reference(resourceId('Microsoft.Network/virtualNetworks', parameters('vnetName')), '2024-05-01').subnets[1].id]"
            }
          }
        }
      }
    },
    {
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2025-04-01",
      "name": "deploy-bastion",
      "properties": {
        "expressionEvaluationOptions": {
          "scope": "inner"
        },
        "mode": "Incremental",
        "parameters": {
          "location": {
            "value": "[parameters('location')]"
          },
          "bastionName": {
            "value": "[format('bas-{0}', parameters('prefix'))]"
          },
          "bastionSubnetId": {
            "value": "[reference(resourceId('Microsoft.Resources/deployments', 'deploy-network'), '2025-04-01').outputs.bastionSubnetId.value]"
          }
        },
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
          "contentVersion": "1.0.0.0",
          "metadata": {
            "_generator": {
              "name": "bicep",
              "version": "0.42.1.51946",
              "templateHash": "15720981027230000793"
            }
          },
          "parameters": {
            "location": {
              "type": "string"
            },
            "bastionName": {
              "type": "string"
            },
            "bastionSubnetId": {
              "type": "string"
            }
          },
          "resources": [
            {
              "type": "Microsoft.Network/publicIPAddresses",
              "apiVersion": "2024-05-01",
              "name": "[format('pip-{0}', parameters('bastionName'))]",
              "location": "[parameters('location')]",
              "sku": {
                "name": "Standard"
              },
              "properties": {
                "publicIPAllocationMethod": "Static"
              }
            },
            {
              "type": "Microsoft.Network/bastionHosts",
              "apiVersion": "2024-05-01",
              "name": "[parameters('bastionName')]",
              "location": "[parameters('location')]",
              "sku": {
                "name": "Standard"
              },
              "properties": {
                "enableTunneling": true,
                "enableFileCopy": true,
                "ipConfigurations": [
                  {
                    "name": "ipconfig1",
                    "properties": {
                      "publicIPAddress": {
                        "id": "[resourceId('Microsoft.Network/publicIPAddresses', format('pip-{0}', parameters('bastionName')))]"
                      },
                      "subnet": {
                        "id": "[parameters('bastionSubnetId')]"
                      }
                    }
                  }
                ]
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', format('pip-{0}', parameters('bastionName')))]"
              ]
            }
          ],
          "outputs": {
            "bastionId": {
              "type": "string",
              "value": "[resourceId('Microsoft.Network/bastionHosts', parameters('bastionName'))]"
            },
            "bastionName": {
              "type": "string",
              "value": "[parameters('bastionName')]"
            }
          }
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Resources/deployments', 'deploy-network')]"
      ]
    },
    {
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2025-04-01",
      "name": "deploy-hyperv-host",
      "properties": {
        "expressionEvaluationOptions": {
          "scope": "inner"
        },
        "mode": "Incremental",
        "parameters": {
          "location": {
            "value": "[parameters('location')]"
          },
          "vmName": {
            "value": "[format('vm-{0}-hv01', parameters('prefix'))]"
          },
          "subnetId": {
            "value": "[reference(resourceId('Microsoft.Resources/deployments', 'deploy-network'), '2025-04-01').outputs.onpremSubnetId.value]"
          },
          "adminUsername": {
            "value": "[parameters('adminUsername')]"
          },
          "adminPassword": {
            "value": "[parameters('adminPassword')]"
          },
          "vmSize": {
            "value": "[parameters('vmSize')]"
          },
          "dataDiskSizeGB": {
            "value": "[parameters('dataDiskSizeGB')]"
          }
        },
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
          "contentVersion": "1.0.0.0",
          "metadata": {
            "_generator": {
              "name": "bicep",
              "version": "0.42.1.51946",
              "templateHash": "4166768765971600872"
            }
          },
          "parameters": {
            "location": {
              "type": "string"
            },
            "vmName": {
              "type": "string"
            },
            "subnetId": {
              "type": "string"
            },
            "adminUsername": {
              "type": "string"
            },
            "adminPassword": {
              "type": "securestring"
            },
            "vmSize": {
              "type": "string",
              "defaultValue": "Standard_E4s_v5",
              "metadata": {
                "description": "VM size supporting nested virtualization"
              }
            },
            "osDiskSizeGB": {
              "type": "int",
              "defaultValue": 128
            },
            "dataDiskSizeGB": {
              "type": "int",
              "defaultValue": 256
            }
          },
          "resources": [
            {
              "type": "Microsoft.Network/networkInterfaces",
              "apiVersion": "2024-05-01",
              "name": "[format('nic-{0}', parameters('vmName'))]",
              "location": "[parameters('location')]",
              "properties": {
                "ipConfigurations": [
                  {
                    "name": "ipconfig1",
                    "properties": {
                      "privateIPAllocationMethod": "Dynamic",
                      "subnet": {
                        "id": "[parameters('subnetId')]"
                      }
                    }
                  }
                ]
              }
            },
            {
              "type": "Microsoft.Compute/virtualMachines",
              "apiVersion": "2024-07-01",
              "name": "[parameters('vmName')]",
              "location": "[parameters('location')]",
              "properties": {
                "hardwareProfile": {
                  "vmSize": "[parameters('vmSize')]"
                },
                "osProfile": {
                  "computerName": "[take(parameters('vmName'), 15)]",
                  "adminUsername": "[parameters('adminUsername')]",
                  "adminPassword": "[parameters('adminPassword')]"
                },
                "storageProfile": {
                  "imageReference": {
                    "publisher": "MicrosoftWindowsServer",
                    "offer": "WindowsServer",
                    "sku": "2022-datacenter-g2",
                    "version": "latest"
                  },
                  "osDisk": {
                    "name": "[format('osdisk-{0}', parameters('vmName'))]",
                    "createOption": "FromImage",
                    "diskSizeGB": "[parameters('osDiskSizeGB')]",
                    "managedDisk": {
                      "storageAccountType": "Premium_LRS"
                    }
                  },
                  "dataDisks": [
                    {
                      "lun": 0,
                      "name": "[format('datadisk-{0}', parameters('vmName'))]",
                      "createOption": "Empty",
                      "diskSizeGB": "[parameters('dataDiskSizeGB')]",
                      "managedDisk": {
                        "storageAccountType": "Premium_LRS"
                      }
                    }
                  ]
                },
                "networkProfile": {
                  "networkInterfaces": [
                    {
                      "id": "[resourceId('Microsoft.Network/networkInterfaces', format('nic-{0}', parameters('vmName')))]"
                    }
                  ]
                }
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', format('nic-{0}', parameters('vmName')))]"
              ]
            },
            {
              "type": "Microsoft.Compute/virtualMachines/runCommands",
              "apiVersion": "2024-07-01",
              "name": "[format('{0}/{1}', parameters('vmName'), 'install-hyperv')]",
              "location": "[parameters('location')]",
              "properties": {
                "source": {
                  "script": "        # Initialize data disk (F: drive)\r\n        $disk = Get-Disk | Where-Object { $_.PartitionStyle -eq 'RAW' }\r\n        if ($disk) {\r\n          $disk | Initialize-Disk -PartitionStyle GPT -PassThru |\r\n            New-Partition -DriveLetter F -UseMaximumSize |\r\n            Format-Volume -FileSystem NTFS -NewFileSystemLabel \"HyperV-Data\" -Confirm:$false\r\n        }\r\n\r\n        # Create Hyper-V default folders on data disk\r\n        New-Item -Path \ [...]
                },
                "timeoutInSeconds": 600
              },
              "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('vmName'))]"
              ]
            }
          ],
          "outputs": {
            "vmId": {
              "type": "string",
              "value": "[resourceId('Microsoft.Compute/virtualMachines', parameters('vmName'))]"
            },
            "vmName": {
              "type": "string",
              "value": "[parameters('vmName')]"
            },
            "privateIpAddress": {
              "type": "string",
              "value": "[reference(resourceId('Microsoft.Network/networkInterfaces', format('nic-{0}', parameters('vmName'))), '2024-05-01').ipConfigurations[0].properties.privateIPAddress]"
            }
          }
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Resources/deployments', 'deploy-network')]"
      ]
    }
  ],
  "outputs": {
    "vnetName": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Resources/deployments', 'deploy-network'), '2025-04-01').outputs.vnetName.value]"
    },
    "bastionName": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Resources/deployments', 'deploy-bastion'), '2025-04-01').outputs.bastionName.value]"
    },
    "hypervHostName": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Resources/deployments', 'deploy-hyperv-host'), '2025-04-01').outputs.vmName.value]"
    },
    "hypervHostPrivateIp": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Resources/deployments', 'deploy-hyperv-host'), '2025-04-01').outputs.privateIpAddress.value]"
    }
  }
}
